# SNCF-MAX-TICKETS-CHECKER

./: .env  .gitignore  Dockerfile  docker-compose.yml
python_backend/: .env  Dockerfile  README.md  pyproject.toml
python_backend/src/sncf_max_tickets_checker/: config.py  email_sender.py  main.py  models.py  ticket_fetcher.py
python_backend/src/sncf_max_tickets_checker/routes/: alert_routes.py
react_front/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
react_front/src/: App.tsx  main.tsx
react_front/src/style/: App.scss
src/sncf_max_tickets_checker/: config.py  email_sender.py  main.py
src/sncf_max_tickets_checker/routes/: alert_routes.py
